# math-research-lab-for-codex

./: .gitignore  README.md
plugins/math-research-lab/: README.md  pyproject.toml
plugins/math-research-lab/.codex-plugin/: plugin.json
plugins/math-research-lab/examples/: balanced_research_judgment_example.md  candidate_concept_audit.md  experimental_result_audit.md  generic_metric_anomaly_audit.md  mathematical_claim_audit.md  proof_obligation_generation.md  research_judge_example.md
plugins/math-research-lab/references/: claim_taxonomy.md  evidence_levels.md  falsification_protocol.md  judge_policy.md  uncertainty_policy.md  universal_research_audit_protocol.md
plugins/math-research-lab/skills/concept-disambiguation/: SKILL.md
plugins/math-research-lab/skills/concept-miner/: SKILL.md
plugins/math-research-lab/skills/concept-registry/: SKILL.md
plugins/math-research-lab/skills/experiment-audit/: SKILL.md
plugins/math-research-lab/skills/formalize-problem/: SKILL.md
plugins/math-research-lab/skills/geometry-audit/: SKILL.md
plugins/math-research-lab/skills/metric-audit/: SKILL.md
plugins/math-research-lab/tests/: test_arbiter_check.py  test_bootstrap_ci.py  test_compare_hypotheses.py  test_concept_registry.py  test_downgrade_ledger.py  test_effect_size.py  test_effective_rank.py  test_finite_difference_check.py  test_margin_analysis.py  test_metric_matrix_audit.py  test_optimization_audit.py  test_pairwise_distances.py  test_permutation_test.py  test_prototype_geometry.py  test_research_judge_scoring.py  test_script_cli.py  test_svd_energy.py
(+95 files in other folders)
