[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math-research-lab"
version = "0.1.0"
description = "Universal Codex plugin utilities for mathematical and scientific research auditing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Max" }]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "sympy",
  "scikit-learn",
  "pytest",
  "pyyaml",
  "tomli; python_version < '3.11'"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
